# GymOS

./: .env.example  .gitignore  AGENTS.md  ATHLETE_PROFILE.json  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  EXERCISE_LIBRARY.json  PROGRAM_CONSTRAINTS.json  README.md  analyze_training.py  convert_to_structured.py  docker-compose.yaml  jose_alpizar_data.csv  jose_alpizar_structured.txt  process_gym.py  pyproject.toml
.github/workflows/: coolify-autodeploy.yml
alembic/: env.py  script.py.mako
data/: BODY_METRICS_SEED.json  jose_alpizar_training_log.md
docs/: deploy-notes.md  performance-improvements.md
mejoras/: 01_posibles_mejoras_proximas.md  02_mejoras_mediano_plazo.md  03_mejoras_largo_plazo.md  04_plan_multiusuario_y_suscripcion_play_store.md  05_backlog_operativo_sprints.md  06_HIS09_qa_funcional.md  06_plan_costos_supabase.md  07_input_security_review.md  08_migracion_supabase_comandos.md  Vision.md
nginx/: gymos.conf
scripts/: analyze_training.py  backfill_training_type.py  convert_to_structured.py  dev.sh  migrate_sqlite_to_postgres.py  process_gym.py  seed_body_metrics.py  seed_db.py
src/: auth.py  config.py  database.py  main.py
src/api/: routes.py
src/bot/: formatters.py  handlers.py
src/llm/: client.py  prompts.py
src/models/: __init__.py  body_metrics.py  exercises.py  feedback.py  (+5 more)
supabase/: post_deploy_hardening.sql  rls.sql  storage.sql
tests/: test_api_input_validation.py  test_history_backfill.py  test_import_service.py  test_progression_engine.py  test_workout_logger.py
web/: README.md  package-lock.json  package.json
(+44 files in other folders)
